--- a/assets/public/index.css
+++ b/assets/public/index.css
@@ -219,8 +219,8 @@ table {
 .app {
   max-width: 1140px;
   width: 100%;
-  background: #ffffff;
+  background: #f5f4f4;
+  border-radius: 10px;
   padding: 35px 15px;
   margin: 50px auto;
-  border: 2px solid red;
 }
