--- a/assets/src/index.scss
+++ b/assets/src/index.scss
@@ -9,10 +9,8 @@
 .app {
     max-width: 1140px;
     width: 100%;
-    background: #ffffff;
+    background: #f5f4f4;
+    border-radius: 10px;
     padding: 35px 15px;
     margin: 50px auto;
-    border: 2px solid red;
 }
-
-
