fixed background-color: filter, info

--- a/assets/src/_inform.scss
+++ b/assets/src/_inform.scss
@@ -48,7 +48,7 @@
         &__delete-img {
             margin-left: 25px;
             border: none;
-            background-color: #ffffff;
+            background: #f5f4f4;
         }
     }
 }
