--- a/assets/public/index.css
+++ b/assets/public/index.css
@@ -143,7 +143,7 @@ table {
 }
 .filter__box .btn-img {
   border: none;
-  background-color: #ffffff;
+  background: #f5f4f4;
 }
 
 .inform {
@@ -190,7 +190,7 @@ table {
 .inform-item__delete-img {
   margin-left: 25px;
   border: none;
-  background-color: #ffffff;
+  background: #f5f4f4;
 }
 
 .footer {
