--- a/assets/src/_inform.scss
+++ b/assets/src/_inform.scss
@@ -50,5 +50,9 @@
             border: none;
             background: #f5f4f4;
         }
+
+        &__mark {
+            border: none;
+        }
     }
 }
